<resources>
    <string name="app_name">AutumnBox</string>
    <string name="title_activity_main">Thanks for choice AutumnBox</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="msg_have_no_installl_alipay">You are not installed alipay application...</string>
    <string name="btn_cancel">Cancel</string>
    <string name="autumnbox_android">Android(Kotlin)</string>
    <string name="autumnbox_pc">PC(C#)</string>
    <string name="title_pls_select_repo">Plz select a repo</string>
    <string name="toast_already_copy">Copied</string>
    <string name="action_settings">Settings</string>
    <string name="main_thanks">Thank you for choice AutumnBox</string>
    <string name="main_desc_format">ACP%.1f-based request processing service</string>
    <string name="state_server_loading">Loading</string>
    <string name="state_server_running">Runing</string>
    <string name="state_server_ex">Not Runing</string>
    <string name="nav_donate">Donate</string>
    <string name="nav_about">About</string>
    <string name="nav_official">AutumnBox official</string>
    <string name="nav_os">Open source</string>
    <string name="nav_exit">Exit</string>
    <string name="title_about">About AutumnBox</string>
    <string name="msg_about">Nothing</string>
    <string name="btn_ok">OK</string>
    <string name="title_donate">Donate developer</string>
    <string name="msg_donate">Make android better together</string>
    <string name="btn_donate_cpwechat">Copy wechat account</string>
    <string name="btn_donate_cpalipay_code">Copy alipay redpacket code</string>
    <string name="btn_donate_goto_alipaytransfer">Donate on alipay</string>
    <string name="btm_nav_btn_acp">ACP</string>
    <string name="btm_nav_toolbox">Tool box</string>
    <string name="tab_acp_status">Acp status</string>
    <string name="tab_acp_info">What is acp?</string>
    <string name="info_acp">  Born to expand AutumnBox PC...</string>
    <string name="tab_toolbox_root">Root</string>
    <string name="tab_toolbox_noroot">No Root</string>
</resources>
